--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 body{
-    background: #0F1726;
-    padding: 10px;
+    background: black;
+    /* padding: 10px; */
     color: white;
     width: 100vw;
     height: 100vh;
